kubernetes/clusters/home/4-apps/utils/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: utils
  labels:
    app: ntfy

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ntfy

  template:
    metadata:
      labels:
        app: ntfy

    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.26.3
          imagePullPolicy: IfNotPresent

          command:
            - ntfy
            - serve

          ports:
            - name: http
              containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 128Mi

            limits:
              cpu: "1"
              memory: 512Mi

          startupProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 10
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5

          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy

      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache-pvc
