kubernetes/clusters/home/4-apps/utils/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: utils

spec:
  selector:
    app: ntfy

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
