kubernetes/clusters/home/4-apps/utils/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: utils

  annotations:
    external-dns.alpha.kubernetes.io/hostname: ntfy.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - ntfy.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: ntfy.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
